--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,4 +1,4 @@
-name: golangci-lint
+name: Pull Request Check
 on:
   pull_request:
   workflow_dispatch:
@@ -47,3 +47,5 @@ jobs:
       with:
         go-version: 1.19
     - uses: joelanford/go-apidiff@main
+      with:
+        base-ref: master
