--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -14,6 +14,7 @@ jobs:
     - uses: actions/setup-go@v4
       with:
         go-version: 1.19
+    - run: pwd
     - name: Build
       run: go build -v ./...
     - name: Test
@@ -26,6 +27,7 @@ jobs:
         with:
           go-version: 1.19
       - uses: actions/checkout@v3
+      - run: pwd
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
@@ -36,6 +38,7 @@ jobs:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v3
+    - run: pwd
     - name: typos 
       uses: crate-ci/typos@master
   go-apidiff:
@@ -43,9 +46,12 @@ jobs:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0 
     - uses: actions/setup-go@v4
       with:
         go-version: 1.19
+    - run: pwd
     - uses: joelanford/go-apidiff@main
       with:
         base-ref: master
